eclipse-workspace/.metadata/.plugins/org.eclipse.cdt.ui/ABM Completo.build.log
16:46:25 **** Incremental Build of configuration Debug for project ABM Completo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
..\src\utn.c:257:5: error: conflicting types for 'utn_getCaracter'
 int utn_getCaracter(char* pResultado,char* mensaje,char* mensajeError,char string[][20], int cantidadArray, int reintentos)
     ^~~~~~~~~~~~~~~
In file included from ..\src\utn.c:12:0:
..\src\FuncionesGenericas.h:24:5: note: previous declaration of 'utn_getCaracter' was here
 int utn_getCaracter(char* pResultado,char* mensaje,char* mensajeError,char minimo,char maximo,int reintentos);
     ^~~~~~~~~~~~~~~
..\src\utn.c: In function 'utn_getCaracter':
..\src\utn.c:273:12: warning: passing argument 1 of 'strcpy' makes pointer from integer without a cast [-Wint-conversion]
     strcpy(*pResultado,bufferChar);
            ^
In file included from ..\src\utn.c:14:0:
c:\mingw\include\string.h:79:40: note: expected 'char *' but argument is of type 'char'
 _CRTIMP __cdecl __MINGW_NOTHROW  char *strcpy (char *, const char *);
                                        ^~~~~~
..\src\utn.c: At top level:
..\src\utn.c:286:5: error: conflicting types for 'utn_getCaracterSexo'
 int utn_getCaracterSexo(char* pResultado,char* mensaje,char* mensajeError, char string[][20], int cantidadArray, int reintentos)
     ^~~~~~~~~~~~~~~~~~~
In file included from ..\src\utn.c:12:0:
..\src\FuncionesGenericas.h:17:5: note: previous declaration of 'utn_getCaracterSexo' was here
 int utn_getCaracterSexo(char* pResultado,char* mensaje,char* mensajeError, int reintentos);
     ^~~~~~~~~~~~~~~~~~~
..\src\utn.c:401:5: error: conflicting types for 'inicializarArrayCadena'
 int inicializarArrayCadena(char pArray[][20], int cantidadDeArray)
     ^~~~~~~~~~~~~~~~~~~~~~
In file included from ..\src\utn.c:12:0:
..\src\FuncionesGenericas.h:15:6: note: previous declaration of 'inicializarArrayCadena' was here
 void inicializarArrayCadena(char pArray[][20], int cantidadDeArray);
      ^~~~~~~~~~~~~~~~~~~~~~

16:46:26 Build Failed. 3 errors, 1 warnings. (took 830ms)

